syntax = "proto3";

package loco.resource.v1;

import "domain/v1/domain.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/loco-team/loco/shared/proto/resource/v1;resourcev1";

// ResourceType categorizes the type of resource being deployed.
enum ResourceType {
  SERVICE  = 0;
  DATABASE = 1;
  FUNCTION = 2;
  CACHE    = 3;
  QUEUE    = 4;
  BLOB     = 5;
}

// DeploymentPhase indicates the current state of a deployment.
enum DeploymentPhase {
  PENDING   = 0;
  RUNNING   = 1;
  SUCCEEDED = 2;
  FAILED    = 3;
  CANCELED  = 4;
}

// ResourceStatus represents the operational status of a resource based on current deployment and health checks.
enum ResourceStatus {
  AVAILABLE   = 0;
  PROGRESSING = 1;
  DEGRADED    = 2;
  UNAVAILABLE = 3;
  IDLE        = 4;
}

// RegionIntentStatus represents the state of a region intent for a resource.
enum RegionIntentStatus {
  REGION_INTENT_DESIRED      = 0;
  REGION_INTENT_PROVISIONING = 1;
  REGION_INTENT_ACTIVE       = 2;
  REGION_INTENT_DEGRADED     = 3;
  REGION_INTENT_REMOVING     = 4;
  REGION_INTENT_FAILED       = 5;
}

// ResourceService manages resource lifecycle and operations.
service ResourceService {
  // CreateResource creates a new resource.
  rpc CreateResource(CreateResourceRequest) returns (CreateResourceResponse);
  // GetResource retrieves a resource by ID.
  rpc GetResource(GetResourceRequest) returns (GetResourceResponse);
  // GetResourceByName retrieves a resource by name within a workspace.
  rpc GetResourceByName(GetResourceByNameRequest) returns (GetResourceByNameResponse);
  // ListResources lists all resources in a workspace.
  rpc ListResources(ListResourcesRequest) returns (ListResourcesResponse);
  // UpdateResource updates a resource configuration.
  rpc UpdateResource(UpdateResourceRequest) returns (UpdateResourceResponse);
  // DeleteResource deletes a resource.
  rpc DeleteResource(DeleteResourceRequest) returns (DeleteResourceResponse);
  // GetResourceStatus retrieves the current status and deployment information of a resource.
  rpc GetResourceStatus(GetResourceStatusRequest) returns (GetResourceStatusResponse);
  // ListRegions lists available regions for resource deployment.
  rpc ListRegions(ListRegionsRequest) returns (ListRegionsResponse);

  // Logs
  // StreamLogs streams resource logs in real-time.
  rpc StreamLogs(StreamLogsRequest) returns (stream LogEntry);

  // Events
  // GetEvents retrieves events for a resource.
  rpc GetEvents(GetEventsRequest) returns (GetEventsResponse);

  // Resource Operations
  // ScaleResource adjusts resource replicas and resource allocation.
  rpc ScaleResource(ScaleResourceRequest) returns (ScaleResourceResponse);
  // UpdateResourceEnv updates environment variables for a resource.
  rpc UpdateResourceEnv(UpdateResourceEnvRequest) returns (UpdateResourceEnvResponse);
}

// Resource represents a resource in a workspace.
message Resource {
  int64                             id           = 1;
  int64                             workspace_id = 2;
  string                            name         = 4;
  ResourceType                      type         = 6;
  repeated loco.domain.v1.ResourceDomain domains      = 7;
  repeated RegionConfig             regions      = 8;
  int64                             created_by   = 11;
  google.protobuf.Timestamp         created_at   = 12;
  google.protobuf.Timestamp         updated_at   = 13;
  ResourceStatus                    status       = 14;
  optional google.protobuf.Struct   spec         = 15;
  int32                             spec_version = 16;
}

// RegionConfig represents a region deployment intent for a resource.
message RegionConfig {
  string              region     = 1;
  bool                is_primary = 2;
  RegionIntentStatus  status     = 3;
  optional string     last_error = 4;
}

// --- CRUD ---

// CreateResourceRequest is the request to create a new resource.
message CreateResourceRequest {
  int64                           workspace_id = 1;
  string                          name         = 3;
  ResourceType                    type         = 4;
  loco.domain.v1.DomainInput      domain       = 5;
  optional google.protobuf.Struct spec         = 6;
  repeated string                 regions      = 7;
}

// CreateResourceResponse is the response from creating a resource.
message CreateResourceResponse {
  Resource resource = 1;
  string   message  = 2;
}

// GetResourceRequest is the request to retrieve a resource.
message GetResourceRequest {
  int64 resource_id = 1;
}

// GetResourceResponse is the response containing resource information.
message GetResourceResponse {
  Resource resource = 1;
}

// GetResourceByNameRequest is the request to retrieve a resource by name.
message GetResourceByNameRequest {
  int64  workspace_id = 1;
  string name         = 2;
}

// GetResourceByNameResponse is the response containing the resource.
message GetResourceByNameResponse {
  Resource resource = 1;
}

// ListResourcesRequest is the request to list resources.
message ListResourcesRequest {
  int64 workspace_id = 1;
}

// ListResourcesResponse is the response containing the list of resources.
message ListResourcesResponse {
  repeated Resource resources = 1;
}

// UpdateResourceRequest is the request to update a resource.
message UpdateResourceRequest {
  int64           resource_id = 1;
  optional string name        = 2;
  optional string subdomain   = 3;
  optional string domain      = 4;
}

// UpdateResourceResponse is the response from updating a resource.
message UpdateResourceResponse {
  Resource resource = 1;
  string   message  = 2;
}

// DeleteResourceRequest is the request to delete a resource.
message DeleteResourceRequest {
  int64 resource_id = 1;
}

// DeleteResourceResponse is the response from deleting a resource.
message DeleteResourceResponse {
  Resource resource = 1;
  string   message  = 2;
}

// RegionInfo represents available region information.
message RegionInfo {
  string  region     = 1;
  bool    is_default = 2;
  string  health_status = 3;
}

// ListRegionsRequest is the request to list available deployment regions.
message ListRegionsRequest {
}

// ListRegionsResponse is the response containing available regions.
message ListRegionsResponse {
  repeated RegionInfo regions = 1;
}

// GetResourceStatusRequest is the request to retrieve resource status.
message GetResourceStatusRequest {
  int64 resource_id = 1;
}

// DeploymentStatus represents the status of a resource deployment, including phase, replica count, and messages.
message DeploymentStatus {
  int64           id            = 1;
  DeploymentPhase status        = 2;
  int32           replicas      = 3;
  optional string message       = 4;
  optional string error_message = 5;
}

// GetResourceStatusResponse is the response containing resource status information.
message GetResourceStatusResponse {
  Resource         resource            = 1;
  DeploymentStatus current_deployment = 2;
}

// --- Logs ---

// StreamLogsRequest is the request to stream resource logs.
message StreamLogsRequest {
  int64          resource_id = 1;
  optional int32 limit       = 2;
  optional bool  follow      = 3;
}

// LogEntry represents a single log line from a pod container within a resource.
message LogEntry {
  string                    pod_name  = 1;
  string                    namespace = 2;
  string                    container = 3;
  google.protobuf.Timestamp timestamp = 4;
  string                    log       = 5;
  string                    level     = 6;
}

// --- Events ---

// Event represents a Kubernetes event related to a resource (e.g., pod created, failed, crash loop).
message Event {
  google.protobuf.Timestamp timestamp = 1;
  string                    reason    = 2;
  string                    message   = 3;
  string                    type      = 4;
  string                    pod_name  = 5;
}

// GetEventsRequest is the request to retrieve resource events.
message GetEventsRequest {
  int64          resource_id = 1;
  optional int32 limit       = 2;
}

// GetEventsResponse is the response containing resource events.
message GetEventsResponse {
  repeated Event events = 1;
}

// --- Resource Operations ---

// ScaleResourceRequest is the request to scale a resource.
message ScaleResourceRequest {
  int64           resource_id = 1;
  optional int32  replicas    = 2;
  optional string cpu         = 3;
  optional string memory      = 4;
}

// ScaleResourceResponse is the response from scaling a resource.
message ScaleResourceResponse {
  DeploymentStatus deployment = 1;
}

// UpdateResourceEnvRequest is the request to update resource environment variables.
message UpdateResourceEnvRequest {
  int64               resource_id = 1;
  map<string, string> env         = 2;
}

// UpdateResourceEnvResponse is the response from updating environment variables.
message UpdateResourceEnvResponse {
  DeploymentStatus deployment = 1;
}
